--- a/posdash-main/html/backend/table-tree.html
+++ b/posdash-main/html/backend/table-tree.html
@@ -887,6 +887,7 @@
                         <h4 class="card-title">Avatar Sizing</h4>
                      </div>
                   </div>
+                  <!-- plusi -->
                   <div class="card-body">
                      <div class="table-responsive">
                         <table id="tree-table-1" class="table table-hover table-bordered iq-bg-white tree">
